--- a/index.html
+++ b/index.html
@@ -1,3 +1,40 @@
-
-You can download and view all the Adobe Illustrator files for this project
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Daniel G. Stephens ART222 Artist's Journal</title>
+    <style>
+      h1{
+        color: orange;
+        font-family: Futura, "Trebuchet MS", Arial, sans-serif; 
+        font-size: 24px; 
+        font-style: normal; 
+        font-variant: normal; 
+        font-weight: 700; 
+        line-height: 26px; } 
+      h3 { font-family: Futura, "Trebuchet MS", Arial, sans-serif; 
+          font-size: 14px; 
+          font-style: normal; 
+          font-variant: 
+            normal; 
+          font-weight: 700; 
+          line-height: 15.4px; }
+      }
+      body{
+        background-color: white;
+      }
+      p{
+        font-family: Arial, Helvetica, sans-serif;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Daniel G. Stephens</h1>
+    <br>
+    <h3>Artist's Journal</h3>
+    <p>
+    You can download and view all the Adobe Illustrator files for this project
 <a href="https://drive.google.com/drive/folders/1bIjNVzmlWnrCidKGRP_1Pj6XCqXYUXig?usp=sharing">here</a>
+    </p>
+  </body>
+</html>
+
