--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
         font-style: normal; 
         font-variant: normal; 
         font-weight: 700; 
-        line-height: 26px; } 
+        line-height: 0px; } 
       h3 { font-family: Futura, "Trebuchet MS", Arial, sans-serif; 
           font-size: 14px; 
           font-style: normal; 
-          font-variant: 
-            normal; 
+          font-variant: normal; 
           font-weight: 700; 
           line-height: 15.4px; }
       }
