--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
         font-style: normal; 
         font-variant: normal; 
         font-weight: 700; 
-        line-height: 0px; } 
+        line-height: 26.5px; } 
+      h2 { font-family: Futura, "Trebuchet MS", Arial, sans-serif; 
+          color: orange;
+          font-size: 20px; 
+          font-style: normal; 
+          font-variant: normal; 
+          font-weight: 700; 
+          line-height: 21.4px; }
+      }
       h3 { font-family: Futura, "Trebuchet MS", Arial, sans-serif; 
           font-size: 14px; 
           font-style: normal; 
@@ -29,10 +37,46 @@
   <body>
     <h1>Daniel G. Stephens</h1>
     <br>
-    <h3>Artist's Journal</h3>
+    <h2>Artist's Journal</h2>
+    <hr>
+    <h3>
+      Project One: Southworth Planetarium Logo
+    </h3>
+    <p>
+      Arist's reflection:
+    </p>
+    <p>
+      Imagining a logo for the Southworth Planetarium took me through my creative inspiration and planning paces. 
+      On a macro scale, inspiration tends to arrive when I have a lot of different thoughts (or half-thoughts) 
+      banging around in my head at once. There is often a critical moment where a key piece of this unknown 
+      puzzle finds me. Perhaps I’m reading an article from Art News, or Hackaday, or seeing a video on YouTube 
+      about how the Voyager probes process instructions, or I notice the way light reflects and refracts off a 
+      sliver of plastic in my studio. The spark that kindles the idea coalescence process could be almost anything. 
+      But then, it really cannot be almost anything as it usually comes from some source that is part of a relatively 
+      carefully curated collection of seemingly random input that I surround myself with. A list would be exhaustive 
+      and exhausting, but it includes the above-mentioned article and youtube sources as well as things that I have 
+      scattered around my studio; particularly toys and games. But the moment of coalescence is just that, a moment 
+      of seeing something all at once. Sometimes that image is perfectly clear, but often it’s quite fuzzy and thus 
+      invites me to explore it and ask a lot of “what if” questions.
+    </p>
+    <p>
+	    For the planetarium I surrounded my creative space with images, ideas and other mess that suggested 
+      voyaging into the unknown, travelling through interstellar space, peering into the inky darkness 
+      that seems to occupy most of space, and a feeling of the 1970s and 1980s. I chose those two decades as 
+      they followed the planetarium boom of the 50s and 60s and added color and design elements I thought might be fun, 
+      like the blue, orange, green triadic palette that made it to the final design. The key ingredient was the typeface 
+      used by Stanley Kubrick in his 1968 film, 2001 A Space Odyssey. While he used Futura for much of the text in the 
+      film, he turned to Gill Sans for the title screen text. Seeing that text immediately brought up an image of 
+      the Discovery spaceship that the main characters, including Dave Bowman, use to travel to Jupiter to investigate 
+      the “anomaly.” Seeing that ship immediately reminded me of the star projector at the planetarium. Images started 
+      to cascade in my mind and the basic design for the logo was there. I was really drawn to the idea of the planetarium’s 
+      projector as a spacecraft, just like Discovery; they both have similar lines and they both offer travel beyond 
+      the rim of our pale blue dot. I quickly sketched out a version of the logo as I saw it (below) and then left it 
+      alone to sit in Illustrator and in my mind.
+    </p>
     <p>
     You can download and view all the Adobe Illustrator files for this project
-<a href="https://drive.google.com/drive/folders/1bIjNVzmlWnrCidKGRP_1Pj6XCqXYUXig?usp=sharing">here</a>
+<a href="https://drive.google.com/drive/folders/1bIjNVzmlWnrCidKGRP_1Pj6XCqXYUXig?usp=sharing">here</a>.
     </p>
   </body>
 </html>
