--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
       invites me to explore it and ask a lot of “what if” questions.
     </p>
     <p>
-	    For the planetarium I surrounded my creative space with images, ideas and other mess that suggested 
+	For the planetarium I surrounded my creative space with images, ideas and other mess that suggested 
       voyaging into the unknown, travelling through interstellar space, peering into the inky darkness 
       that seems to occupy most of space, and a feeling of the 1970s and 1980s. I chose those two decades as 
-      they followed the planetarium boom of the 50s and 60s and added color and design elements I thought might be fun, 
+      they followed the planetarium boom of the 50s and 60s<sup><a href="#footnote_1">jump link</a></sup> and added color and design elements I thought might be fun, 
       like the blue, orange, green triadic palette that made it to the final design. The key ingredient was the typeface 
       used by Stanley Kubrick in his 1968 film, 2001 A Space Odyssey. While he used Futura for much of the text in the 
       film, he turned to Gill Sans for the title screen text. Seeing that text immediately brought up an image of 
@@ -78,6 +78,10 @@
     You can download and view all the Adobe Illustrator files for this project
 <a href="https://drive.google.com/drive/folders/1bIjNVzmlWnrCidKGRP_1Pj6XCqXYUXig?usp=sharing">here</a>.
     </p>
+<h6><div id="footnote_1">1</div>  I found a reference to the peak excitement around planetariums on the planetarium wikipedia page; 
+		  certainly not academic-paper level research, but I needed a quick answer and it was okay if it 
+		  was slightly inaccurate. 
+</h6>
   </body>
 </html>
 
