--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       }
       body{
         background-color: white;
+	padding: 25px
       }
       p{
         font-family: Arial, Helvetica, sans-serif;
