--- a/index.html
+++ b/index.html
@@ -10,29 +10,37 @@
         font-style: normal; 
         font-variant: normal; 
         font-weight: 700; 
-        line-height: 26.5px; } 
+        line-height: 26.5px; 
+      } 
       h2 { font-family: Futura, "Trebuchet MS", Arial, sans-serif; 
           color: orange;
           font-size: 20px; 
           font-style: normal; 
           font-variant: normal; 
           font-weight: 700; 
-          line-height: 21.4px; }
+          line-height: 21.4px; 
       }
       h3 { font-family: Futura, "Trebuchet MS", Arial, sans-serif; 
           font-size: 14px; 
           font-style: normal; 
           font-variant: normal; 
           font-weight: 700; 
-          line-height: 15.4px; }
+          line-height: 15.4px; 
       }
-      body{
+    h6{
+	font-family: Futura, "Trebuchet MS", Arial, sans-serif; 
+	font-size: 10px;
+    }
+      body {
         background-color: white;
 	padding: 25px
       }
-      p{
+      p {
         font-family: Arial, Helvetica, sans-serif;
       }
+	span {
+		font-family: Arial, Helvetica, sans-serif;
+	}
     </style>
   </head>
   <body>
