--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     h6{
 	font-family: Futura, "Trebuchet MS", Arial, sans-serif; 
 	font-size: 10px;
+	font-style: normal;
+	line-height: 10.2px
     }
       body {
         background-color: white;
