--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
       the rim of our pale blue dot. I quickly sketched out a version of the logo as I saw it (below) and then left it 
       alone to sit in Illustrator and in my mind.
     </p>
+	  <img src="
     <p>
     You can download and view all the Adobe Illustrator files for this project
 <a href="https://drive.google.com/drive/folders/1bIjNVzmlWnrCidKGRP_1Pj6XCqXYUXig?usp=sharing">here</a>.
