--- a/index.html
+++ b/index.html
@@ -85,6 +85,24 @@
       the rim of our pale blue dot. I quickly sketched out a version of the logo as I saw it (below) and then left it 
       alone to sit in Illustrator and in my mind.
     </p>
+	  <img src="1_DanielStephens_PlanetariumLogo_1.png">
+<p>
+	At this point I move into evaluate and execute mode. What do I love about the design, what do I find abrasive 
+	or disjunctive, what do I find confusing. Looking at the logo again I really didn’t like the shape of the 
+	“spaceship/projector,” it felt chunky and sits awkwardly in space. I also didn’t understand why I’d placed the 
+	“planet” upside down. While I like the way it looks, it leaves me wondering what the orange circle is in the 
+	upper right corner. I know that it’s supposed to be a distant planet, but why would a planet sit in the “atmosphere” 
+	of another planet? It didn’t ring true. I did like the colors and how they sit together. I liked the orange limb on 
+	each of the spaceship’s spheres. I liked the rising star. Knowing how I felt drove the second pass of the logo. 
+	I wanted to flip the large planet 180 degrees and find a more energetic expression of the spaceship and bring 
+	the rising star more into the foreground.
+</p>
+<p>
+	After a few hours of play I arrived at a design that I felt captured my initial vision and felt balanced and 
+	energetic (Logo Version 2). I then spent time tweaking things like the thickness of the spaceship’s orange 
+	limbs, the placement of the pale blue line through the spaceship’s spheres and the placement and alignment 
+	of the text. These tweaks brought the logo to a point where I felt comfortable sharing it. 
+</p>
 	  <img src="
     <p>
     You can download and view all the Adobe Illustrator files for this project
