--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 	limbs, the placement of the pale blue line through the spaceship’s spheres and the placement and alignment 
 	of the text. These tweaks brought the logo to a point where I felt comfortable sharing it. 
 </p>
-	  <img src="
+	  <img src="3_DanielStephens_PlanetariumLogo_v2.1_GillSans_horizontal_235x1.png">
     <p>
     You can download and view all the Adobe Illustrator files for this project
 <a href="https://drive.google.com/drive/folders/1bIjNVzmlWnrCidKGRP_1Pj6XCqXYUXig?usp=sharing">here</a>.
