--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
 	line-height: 10.2px
     }
       body {
+	font-family: Futura, "Trebuchet MS", Arial, sans-serif; 
         background-color: white;
-	padding: 25px
+	padding: 35px
       }
       p {
         font-family: Arial, Helvetica, sans-serif;
