--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       the rim of our pale blue dot. I quickly sketched out a version of the logo as I saw it (below) and then left it 
       alone to sit in Illustrator and in my mind.
     </p>
-	  <img src="1_DanielStephens_PlanetariumLogo_1.png" width="80%">
+	  <img src="1_DanielStephens_PlanetariumLogo_1.png" width="80%" alt="Logo Version One">
 <p>
 	At this point I move into evaluate and execute mode. What do I love about the design, what do I find abrasive 
 	or disjunctive, what do I find confusing. Looking at the logo again I really didn’t like the shape of the 
@@ -104,7 +104,7 @@
 	limbs, the placement of the pale blue line through the spaceship’s spheres and the placement and alignment 
 	of the text. These tweaks brought the logo to a point where I felt comfortable sharing it. 
 </p>
-	  <img src="3_DanielStephens_PlanetariumLogo_v2.1_GillSans_horizontal_235x1.png" width="80%">
+	  <img src="3_DanielStephens_PlanetariumLogo_v2.1_GillSans_horizontal_235x1.png" width="80%" alt="Logo Version Two">
 <p>
 <p>
 	Most of the feedback I received was relatively positive and centered around the amount of thought I put into the 
