--- a/index.html
+++ b/index.html
@@ -32,18 +32,25 @@
 	font-size: 10px;
 	font-style: normal;
 	line-height: 10.2px
+	font-weight: 200;
     }
       body {
 	font-family: Futura, "Trebuchet MS", Arial, sans-serif; 
         background-color: white;
-	padding: 35px
+	padding: 35px;
       }
       p {
         font-family: Arial, Helvetica, sans-serif;
       }
-	span {
-		font-family: Arial, Helvetica, sans-serif;
-	}
+span {
+	font-family: Arial, Helvetica, sans-serif;
+}
+.image_text {
+	padding: 0px;
+	margin: 0px;
+	font-size: 10px;
+	font-weight: 200;
+}
     </style>
   </head>
   <body>
@@ -87,6 +94,7 @@
       alone to sit in Illustrator and in my mind.
     </p>
 	  <img src="1_DanielStephens_PlanetariumLogo_1.png" width="80%" alt="Logo Version One">
+	  <div class="image_text">Logo Version One</div>
 <p>
 	At this point I move into evaluate and execute mode. What do I love about the design, what do I find abrasive 
 	or disjunctive, what do I find confusing. Looking at the logo again I really didn’t like the shape of the 
@@ -105,6 +113,7 @@
 	of the text. These tweaks brought the logo to a point where I felt comfortable sharing it. 
 </p>
 	  <img src="3_DanielStephens_PlanetariumLogo_v2.1_GillSans_horizontal_235x1.png" width="80%" alt="Logo Version Two">
+	  <div class="image_text">Logo Version Two</div>
 <p>
 <p>
 	Most of the feedback I received was relatively positive and centered around the amount of thought I put into the 
