--- a/index.html
+++ b/index.html
@@ -57,7 +57,105 @@ span {
     <h1>Daniel G. Stephens</h1>
     <br>
     <h2>Artist's Journal</h2>
+	  <hr>
+	  <h3>
+		  Project Two: (x)topia duet
+	  </h3>
+	  <p>
+		  Artist's reflection:
+	  </p>
+	  <p>
+		  	For these two works I started with a simple idea of expressing and exploring loops. Specifically, 
+		  I wanted to explore the growing infringement of AI processes on everyday human experience. I felt that 
+		  I should push this to the edge of absurdity and then take at least one more step. But why loops? And what 
+		  exactly is a loop in the context of this exploration? 
+	  </p>
+	  <p>
+		  I have been fascinated with loops for most of my life. I discovered programming at a very young age 
+		  and was amazed by the power of the algorithmic loop; like a simple “for” loop or even just a “goto” 
+		  loop in BASIC. This ability to iterate over a set of data, or a process, and make tiny changes each 
+		  time. The realization that the starting state and the ending state could be so vastly different even 
+		  though the changes that got us there were nearly imperceptible when examining a single iteration of 
+		  the loop. One loop, in fact, is hardly a loop at all. If we say x=5 and then ask what 3 times x 
+		  equals we get 15. One loop. If we then increment x by double it’s previous value such that it’s now 
+		  10 and then we run this loop again we get 30. Now we run it again and we get 60 and if we run it 100 
+		  times, x = 5 times 6 to the 100th power. That’s an astronomically massive number. And we got there in 
+		  100 steps of a very simple loop. Loops are power. But are they good or bad power?
+	  </p>
+	  <p>
+		  When I set out to create my two (x)topias (and I’ll explain (x)topia a little further down) I wanted 
+		  one to clearly depict the negative reality, the existential experience of living in a society dominated 
+		  by a loop in which humans only experience the outcome, which is consumption of shiny things. Why 
+		  consumption of shiny things? Because at a very basic level humans are wired to get a kick of dopamine 
+		  when they experience something new that is also perceived as positive. Why? A million years of evolution 
+		  during which we were seldom exposed to new and shiny, but new and shiny often meant better chances of 
+		  survival. So what if AI can create a loop in which the result is the human receives new, shiny stuff? 
+		  What would that reality look like to the human, from inside their cognitive reality? And what would 
+		  that reality look like from the outside; from an external observer?
+	  </p>
+	  <p>
+		  	One image would be the internal reality, where shiny is everywhere, the utopia. The other image 
+		  would be the external reality of decay and conspicuous consumption, the dystopia. They would show a 
+		  clear delineation of existence. 
+	  </p>
+	  <p>
+		  	I started with the utopia. I wanted it to be clean, bright, roomy, shiny. I wanted a single color 
+		  to pop and dominate the scene. I wanted that color to be associated with clean, clear, fresh. I chose 
+		  blue. Blue is water, blue is clear sky, blue is a “new” color. I also wanted a simple sense of comfort. 
+		  I find shaggy things comfortable and so there’s blue shag on the lounge chairs. I wanted a sense of fancy. 
+		  A blue yak. Totally preposterous, but also ultimate shag and very chill. The space needed a high-tech display. 
+		  Star Trek TNG introduced the world to LCARS (it’s a type of user interface that makes very little sense, 
+		  but looks super cool) so this space would have an LCARS display. The protagonist reclines in her lounge 
+		  chair atop a shag blue throw, comfortable, confident, excited about what shiny new thing will come next. 
+		  This scene is the inner space of the new shiny loop.
+	  </p>
+	  <img src="(x)topia_one.png" width="80%" alt="(x)topia one">
+	  <div class="image_text">(x)topia one</div>
+	  <p>
+		  	Happy with the utopia I started work on the dystopia. It needed to be everything the utopia wasn’t, 
+		  orange instead of blue, dingy instead of clean, underground instead of in the light. It should be a space 
+		  that is under constant surveillance, so it needed an ever-watchful camera tucked away somewhere obvious, 
+		  but seemingly hidden. The protagonist, the same person from the first image, reclines, but in a chair 
+		  that exudes old, musty, dark living room vibes. They’re older, sad, lost. The technology they use to 
+		  ‘jack in’ is clunky and cumbersome. This scene is the existential reality of the loop.
+	  </p>
+	  <img src="(x)topia_two_pre.png" width="80%" alt="(x)topia two [unfinished]">
+	  <div class="image_text">(x)topia two</div>
+	  <p>
+		  	As I finished the dystopia I realized that in fact, it wasn’t really all that terrible of a place. 
+		  Yes, it was a bit dank and dark, but it also had a sense of comfort about it, a sense of being lived-in 
+		  and even loved. I went back to the utopia image and just started adding a bits here and there to make it 
+		  feel more industrial, more contrived. What I discovered after a few hours of going back and forth was that 
+		  I was no longer sure which was which. The utopia had somehow devolved into a shiny proto-dystopia and 
+		  the dystopia had evolved into a well-worn, musty proto-utopia. 
+	  </p>
+	  <img src="(x)topia_two.png" width="80%" alt="(x)topia two">
+	  <div class="image_text">(x)topia two</div>
+	  <p>
+		  They had both crossed a threshold and contained shared DNA that bridged the gulf between utopia 
+		  and dystopia. I found this delightful as my understanding of both topias is that either can step 
+		  in, can represent the other, depending upon perspective. One human’s dystopia is another human’s 
+		  utopia. Look at the political situation in the US right now. There are some who believe this is 
+		  the greatest era of American prosperity and change ever - they are, of course, delusional and 
+		  dangerous, but they exist. And there are those, among whom I count myself, who believe we’re 
+		  sliding into … dystopia.
+	  </p>
+	  <p>
+		   Are these images effective at telling the story of the original concept? No, not truly. In fact, 
+		  I believe the sense of “loop-ness” has been significantly dialed back, particularly in (x)topia 
+		  two, such that it’s difficult to see that these two images are reflections of one another. There 
+		  are signs of this: both protagonists are reclining, they are on opposite sides of the image, they 
+		  appear to be “jacked” into something, they exist in a space that feels surreal, dreamlike. But 
+		  there is nothing overt, no one thing that strictly binds them together. Perhaps I could have 
+		  added some piece of identically rendered tech and that would make the connection. Or I could 
+		  have added some kind of “tether” that links the two humans in an obvious manner. But perhaps 
+		  it’s best that it’s not obvious. This wasn’t my initial intent. I wanted it to be obvious. But 
+		  it does create a, I believe, a strong sense of wonder and, perhaps, a desire to let the eye 
+		  wander about to see find all the bits that don’t quite fit; all the bits that point to this 
+		  reality not being our own.
+	  </p>
     <hr>
+	  
     <h3>
       Project One: Southworth Planetarium Logo
     </h3>
