--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ span {
 		  chair atop a shag blue throw, comfortable, confident, excited about what shiny new thing will come next. 
 		  This scene is the inner space of the new shiny loop.
 	  </p>
-	  <img src="(x)topia_one.png" width="80%" alt="(x)topia one">
+	  <img src="(x)topia_one_pre.png" width="80%" alt="(x)topia one [unfinished]">
 	  <div class="image_text">(x)topia one</div>
 	  <p>
 		  	Happy with the utopia I started work on the dystopia. It needed to be everything the utopia wasn’t, 
@@ -119,7 +119,7 @@ span {
 		  that exudes old, musty, dark living room vibes. They’re older, sad, lost. The technology they use to 
 		  ‘jack in’ is clunky and cumbersome. This scene is the existential reality of the loop.
 	  </p>
-	  <img src="(x)topia_two_pre.png" width="80%" alt="(x)topia two [unfinished]">
+	  <img src="(x)topia_two_fourthree.png" width="80%" alt="(x)topia two">
 	  <div class="image_text">(x)topia two</div>
 	  <p>
 		  	As I finished the dystopia I realized that in fact, it wasn’t really all that terrible of a place. 
