--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@ span {
 		  I was no longer sure which was which. The utopia had somehow devolved into a shiny proto-dystopia and 
 		  the dystopia had evolved into a well-worn, musty proto-utopia. 
 	  </p>
-	  <img src="(x)topia_two.png" width="80%" alt="(x)topia two">
-	  <div class="image_text">(x)topia two</div>
+	  <img src="(x)topia_one.png" width="80%" alt="(x)topia one">
+	  <div class="image_text">(x)topia one [finished]</div>
 	  <p>
 		  They had both crossed a threshold and contained shared DNA that bridged the gulf between utopia 
 		  and dystopia. I found this delightful as my understanding of both topias is that either can step 
