--- a/index.html
+++ b/index.html
@@ -79,9 +79,11 @@ span {
 		  always bright, and shiny, and convenient. The future, as seen from the early-post World War II 
 		  era into the mid Vietnam war era was going to be just swell. 
 	  </p>
+	 <p>
 	  <iframe width="560" height="315" src="https://www.youtube.com/embed/Q--YZ30HqDo?si=6T4uCOmCq-28VehL" title="YouTube video player" 
 		  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
 		  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+	 </p>
 	  <p>
 		  My core concept for this project was to build a short film made of found footage that took the 
 		  hopeful, shiny, clean, and always convenient examples of yesterday’s future tech and slowly twist 
@@ -95,6 +97,9 @@ span {
 		  Under the Milky Way Tonight</i>. 
 	  </p>
 	  <p>
+		  <iframe width="560" height="315" src="https://www.youtube.com/embed/PE1ges9nn6A?si=FHRjvBHTi_7du1dm" 
+			  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+			  encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 		  [Laura Veirs Galaxies on YouTube]
 	  </p>
 	  <p>
