--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@ span {
 		  [Laura Veirs Galaxies on YouTube]
 	  </p>
 	  <p>
+		  <iframe width="560" height="315" src="https://www.youtube.com/embed/pWxJEIz7sSA?si=4pR5RapomsV80V5_" 
+			  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+			  encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 		  [The Church’s Under the Milkyway Tonight on YouTube]
 	  </p>
 	  <p>
