--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ span {
     <h1>Daniel G. Stephens</h1>
     <br>
     <h2>Artist's Journal</h2>
+	  <hr>
 	  <h3>
 		  Project Three: Under the Galaxy (tonight)
 	  </h3>
@@ -83,6 +84,7 @@ span {
 	  <iframe width="560" height="315" src="https://www.youtube.com/embed/Q--YZ30HqDo?si=6T4uCOmCq-28VehL" title="YouTube video player" 
 		  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
 		  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+		 <div>[Under the Galaxy (tonight)]</div>
 	 </p>
 	  <p>
 		  My core concept for this project was to build a short film made of found footage that took the 
@@ -100,13 +102,13 @@ span {
 		  <iframe width="560" height="315" src="https://www.youtube.com/embed/PE1ges9nn6A?si=FHRjvBHTi_7du1dm" 
 			  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
 			  encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-		  [Laura Veirs Galaxies on YouTube]
+		  <div>[Laura Veirs Galaxies on YouTube]</div>
 	  </p>
 	  <p>
 		  <iframe width="560" height="315" src="https://www.youtube.com/embed/pWxJEIz7sSA?si=4pR5RapomsV80V5_" 
 			  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
 			  encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-		  [The Church’s Under the Milkyway Tonight on YouTube]
+		  <div>[The Church’s Under the Milkyway Tonight on YouTube]</div>
 	  </p>
 	  <p>
 		  In their reimagined form the two songs intermingle to form a unified whole that both narrates and 
