--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@ span {
 		  here despite your destination.” This plays over the rocket launch sequence and was done so to suggest 
 		  that no matter what we do, even when we believe we are doing the right thing, our proclivity for self-destruction 
 		  always rests nearby. These two songs are delightfully thematically unrelated. Steve Kilbey, The Church’s 
-		  lead singer, has said in an interview that “... there are songs that operate as a premise for you to have 
+		  lead singer, has said <a href="https://norselandsrock.com/under-the-milky-way-church/">in an interview</a> that “... 
+		  there are songs that operate as a premise for you to have 
 		  your own adventure. Under the Milky Way is definitely one of those songs. Although it’s not really about 
 		  anything at all, I just wanted to create an atmosphere and I didn’t even put a lot of thought into that.” 
 		  Veirs’ <i>Galaxies</i> evokes deep passion, feeling and emotion that generates large-scale physicality. I would 
