--- a/index.html
+++ b/index.html
@@ -93,7 +93,15 @@ span {
 		  inextinguishable hubris and desire for convenience and quantity over quality and kindness. 
 		  The media for the film came from the Prelinger Archives and I further confined my available 
 		  films to those that specifically depicted kitchens of the future and the future of humanity 
-		  in space. I also sought a soundtrack for the piece that would provide both a tempo and a commentary 
+		  in space. 
+		  
+		   <img src="ChevroletPresentsKitchen1958.png" width="80%" alt="Chevrolet Presents American Look 1958">
+		  [Chevrolet Presents American Look 1958 - Kitchen of tomorrow.]
+
+		  <img src="GeneralMotorsKitchen1956.png" width="80%" alt="General Motors 1956">
+		  [General Motors’ Design for Dreaming 1956 - Kitchen of tomorrow]
+		  
+		  I also sought a soundtrack for the piece that would provide both a tempo and a commentary 
 		  on the chosen clips through voiceover and lyrics. I decided to combine two of songs whose lyrics, 
 		  when edited together, helped tell the story. I chose Laura Veirs’ <i>Galaxies</i>, and <i>The Church’s 
 		  Under the Milky Way Tonight</i>. 
