--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@ span {
 		  in space. 
 		  
 		   <img src="ChevroletPresentsKitchen1958.png" width="80%" alt="Chevrolet Presents American Look 1958">
-		  [Chevrolet Presents American Look 1958 - Kitchen of tomorrow.]
+		  <div>[Chevrolet Presents American Look 1958 - Kitchen of tomorrow.]</div>
 
 		  <img src="GeneralMotorsKitchen1956.png" width="80%" alt="General Motors 1956">
-		  [General Motors’ Design for Dreaming 1956 - Kitchen of tomorrow]
+		  <div>[General Motors’ Design for Dreaming 1956 - Kitchen of tomorrow]</div>
 		  
 		  I also sought a soundtrack for the piece that would provide both a tempo and a commentary 
 		  on the chosen clips through voiceover and lyrics. I decided to combine two of songs whose lyrics, 
