--- a/index.html
+++ b/index.html
@@ -129,7 +129,15 @@ span {
 		  In evaluating the final piece with the distance of a few days from finishing it I have a few 
 		  observations. First, there are a few things I would change listed here in no particular order. Every 
 		  time I watch the piece I wish that there was some additional message that appeared in the black bars 
-		  to the left and right of the 4:3 frame. Our modern eyes are used to seeing a 16:9 frame, and YouTube 
+		  to the left and right of the 4:3 frame. 
+	  </p>
+	  <p>
+		  <img src="GeneralMotorsKitchen1956.png" width="80%" alt="General Motors 1956">
+		  <img src="16x9_extra_stuff_crossed_fingers.png" width="60%" alt="Text in the pillar box area">
+		  <div>[There could be commentary text in the pillar box area]</div>
+	  </p>
+	<p> 	  
+		  Our modern eyes are used to seeing a 16:9 frame, and YouTube 
 		  and other streaming services are tuned to this aspect ratio. I feel this space is perfect for 
 		  commentary simply due to its location in the frame. This commentary would be an evaluation of our 
 		  past’s hope for our future that never was from the future that we created. I would love to be able 
