--- a/project_3.html
+++ b/project_3.html
@@ -1,1 +1,168 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Daniel G. Stephens ART222 Artist's Journal</title>
+    <style>
+      h1{
+        color: orange;
+        font-family: Futura, "Trebuchet MS", Arial, sans-serif; 
+        font-size: 24px; 
+        font-style: normal; 
+        font-variant: normal; 
+        font-weight: 700; 
+        line-height: 26.5px; 
+      } 
+      h2 { font-family: Futura, "Trebuchet MS", Arial, sans-serif; 
+          color: orange;
+          font-size: 20px; 
+          font-style: normal; 
+          font-variant: normal; 
+          font-weight: 700; 
+          line-height: 21.4px; 
+      }
+      h3 { font-family: Futura, "Trebuchet MS", Arial, sans-serif; 
+          font-size: 14px; 
+          font-style: normal; 
+          font-variant: normal; 
+          font-weight: 700; 
+          line-height: 15.4px; 
+      }
+    h6{
+	font-family: Futura, "Trebuchet MS", Arial, sans-serif; 
+	font-size: 10px;
+	font-style: normal;
+	line-height: 10.2px
+	font-weight: 200;
+    }
+      body {
+	font-family: Futura, "Trebuchet MS", Arial, sans-serif; 
+        background-color: white;
+	padding: 35px;
+      }
+      p {
+        font-family: Arial, Helvetica, sans-serif;
+      }
+span {
+	font-family: Arial, Helvetica, sans-serif;
+}
+.image_text {
+	padding: 0px;
+	margin: 0px;
+	font-size: 10px;
+	font-weight: 200;
+}
+    </style>
+  </head>
+  <body>
+	  <h3>
+		  Project Three: Under the Galaxy (tonight)
+	  </h3>
+	  <p>
+		  Artist's reflection
+	  </p>
+	  <p>
+		  For inspiration I drew from my long-standing fascination with the depiction of the future from the
+		  perspective of humanity’s past. I, and others, refer to this as yesterday’s tomorrow. This concept 
+		  of yesterday’s tomorrow provides fertile ground for exploring how we as a society project our hopes, 
+		  dreams, and fears forward in time. Certainly this is easy enough to see in science fiction literature 
+		  and films; it’s a genre that often employs allegory wrapped in a future-shaped package to comment 
+		  on our present. In this capacity, it is intentional and premeditated. Watching any Star Trek episode 
+		  from the original series to Voyager will demonstrate this packaging fairly succinctly. However, 
+		  depictions of the future also exist outside the realm of science fiction in the shape of marketing 
+		  films. The 1940s through the 1970s were filled with marketing films from the likes of AT&T, 
+		  Frigidaire, Chevrolet, IBM and many other corporations large and small. Many of these films were 
+		  meant to show a bright future made ever more so by the company’s products of tomorrow. They 
+		  depicted the kitchen, car, subway, telephone of tomorrow. In these depictions the future was 
+		  always bright, and shiny, and convenient. The future, as seen from the early-post World War II 
+		  era into the mid Vietnam war era was going to be just swell. 
+	  </p>
+	 <p>
+	  <iframe width="560" height="315" src="https://www.youtube.com/embed/Q--YZ30HqDo?si=6T4uCOmCq-28VehL" title="YouTube video player" 
+		  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+		  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+		 <div>[Under the Galaxy (tonight)]</div>
+	 </p>
+	  <p>
+		  My core concept for this project was to build a short film made of found footage that took the 
+		  hopeful, shiny, clean, and always convenient examples of yesterday’s future tech and slowly twist 
+		  and cut and clip and reconfigure it to fit more closely the world we have crafted due to our 
+		  inextinguishable hubris and desire for convenience and quantity over quality and kindness. 
+		  The media for the film came from the Prelinger Archives and I further confined my available 
+		  films to those that specifically depicted kitchens of the future and the future of humanity 
+		  in space. 
+	  </p>
+	  <p>
+		<img src="ChevroletPresentsKitchen1958.png" width="80%" alt="Chevrolet Presents American Look 1958">
+		<div>[Chevrolet Presents American Look 1958 - Kitchen of tomorrow.]</div>
+  	  </p>
+	  <p>
+		  <img src="GeneralMotorsKitchen1956.png" width="80%" alt="General Motors 1956">
+		  <div>[General Motors’ Design for Dreaming 1956 - Kitchen of tomorrow]</div>
+	  </p>
+	 <p>
+		  I also sought a soundtrack for the piece that would provide both a tempo and a commentary 
+		  on the chosen clips through voiceover and lyrics. I decided to combine two of songs whose lyrics, 
+		  when edited together, helped tell the story. I chose Laura Veirs’ <i>Galaxies</i>, and <i>The Church’s 
+		  Under the Milky Way Tonight</i>. 
+	  </p>
+	  <p>
+		  <iframe width="560" height="315" src="https://www.youtube.com/embed/PE1ges9nn6A?si=FHRjvBHTi_7du1dm" 
+			  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+			  encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+		  <div>[Laura Veirs Galaxies on YouTube]</div>
+	  </p>
+	  <p>
+		  <iframe width="560" height="315" src="https://www.youtube.com/embed/pWxJEIz7sSA?si=4pR5RapomsV80V5_" 
+			  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+			  encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+		  <div>[The Church’s Under the Milkyway Tonight on YouTube]</div>
+	  </p>
+	  <p>
+		  In their reimagined form the two songs intermingle to form a unified whole that both narrates and 
+		  drives the visual story; the lyrics interact with the visuals as both cause and effect. 
+	  </p>
+	  <p>
+		  In evaluating the final piece with the distance of a few days from finishing it I have a few 
+		  observations. First, there are a few things I would change listed here in no particular order. Every 
+		  time I watch the piece I wish that there was some additional message that appeared in the black bars 
+		  to the left and right of the 4:3 frame. 
+	  </p>
+	  <p>
+		  <img src="16x9_extra_stuff_crossed_fingers.png" width="80%" alt="Text in the pillar box area">
+		  <div>[There could be commentary text in the pillar box area]</div>
+	  </p>
+	<p> 	  
+		  Our modern eyes are used to seeing a 16:9 frame, and YouTube 
+		  and other streaming services are tuned to this aspect ratio. I feel this space is perfect for 
+		  commentary simply due to its location in the frame. This commentary would be an evaluation of our 
+		  past’s hope for our future that never was from the future that we created. I would love to be able 
+		  to remix the song using pristine audio stems: separate instrumental and vocal tracks. I’ve asked both 
+		  artists if they might be able to make these available to me, but have not yet heard back. I would also 
+		  like to change the clip of the two scientists at 18 seconds, though every time I see their self-satisfied 
+		  faces after the smoke clears, I question the desire to change it. 
+	  </p>
+	  <p>
+		  Finally, I find myself mesmerized by how editing the two songs together creates its own audio Kuleshov 
+		  effect. For instance, at 1:36 Veirs sings, “When we kiss,” which is followed by The Church’s “leads you 
+		  here despite your destination.” This plays over the rocket launch sequence and was done so to suggest 
+		  that no matter what we do, even when we believe we are doing the right thing, our proclivity for self-destruction 
+		  always rests nearby. These two songs are delightfully thematically unrelated. Steve Kilbey, The Church’s 
+		  lead singer, has said <a href="https://norselandsrock.com/under-the-milky-way-church/">in an interview</a> that “... 
+		  there are songs that operate as a premise for you to have 
+		  your own adventure. Under the Milky Way is definitely one of those songs. Although it’s not really about 
+		  anything at all, I just wanted to create an atmosphere and I didn’t even put a lot of thought into that.” 
+		  Veirs’ <i>Galaxies</i> evokes deep passion, feeling and emotion that generates large-scale physicality. I would 
+		  suggest that Kilbey’s song is more ambivalent, evoking feelings of loss and longing but also curiosity and 
+		  desire. Putting them together yields a soundtrack that, to me, feels hopeful on the surface but ominous in
+		  its undertones.
+	  </p>
+	  <p>
+		  Ultimately the piece came out better than I had originally anticipated. It needs work; it needs tightening 
+		  up, some swapping of images, perhaps the addition of the “modern commentary,” but it also seems to work. 
+		  It’s one of the few things I’ve made that I enjoy watching. I think a large part of this might be due to 
+		  having so many obstructions in the way of making anything at all. In a way, I suppose the outcome was inevitable.
+	  </p>
+	  
+   </body>
+</html>
 
