--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@ span {
 	<hr>
 
     <h3>
-        <a href="http://project_1.html">Project One: Southworth Planetarium Logo</a>
+        <a href="http://art222.geekpower.com/project_1.html">Project One: Southworth Planetarium Logo</a>
     </h3>
     <p>
         In this first project for ART222 I was asked to create a logo for the university's Southworth Planetarium.
-        The tool of choice for this project was Adobe Illustrator. Learn more <a href="http://project_1.html">here</a>.
+        The tool of choice for this project was Adobe Illustrator. Learn more <a href="http://art222.geekpower.com/project_1.html">here</a>.
 
     </p>
 
